--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -777,7 +777,9 @@ section {
       left: 25%;
     }
     .client-img{
-      width: 40%;
+      width: 15%;
+      margin-left: 10px;
+      margin-right: 10px;
     }
   }
 }
