--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -121,16 +121,18 @@
     </div>
     <br/>
     <div class="clients">
+      <%= image_tag "clients/google.png", class: "client-img" %>
+      <%= image_tag "clients/caponeto.png", class: "client-img" %>
       <%= image_tag "clients/3m.png", class: "client-img" %>
-      <%= image_tag "clients/coca.png" %>
-      <%= image_tag "clients/indio.png" %>
-      <%= image_tag "clients/modelo.png" %>
-      <%= image_tag "clients/scotch.png" %>
-      <%= image_tag "clients/warner.png" %>
-      <%= image_tag "clients/zumba.png" %>
-      <%= image_tag "clients/coppel.png" %>
-      <%= image_tag "clients/purina.png" %>
-      <%= image_tag "clients/marin.png" %>
+      <%= image_tag "clients/coca.png", class: "client-img" %>
+      <%= image_tag "clients/indio.png", class: "client-img"  %>
+      <%= image_tag "clients/modelo.png", class: "client-img" %>
+      <%= image_tag "clients/scotch.png", class: "client-img" %>
+      <%= image_tag "clients/warner.png", class: "client-img" %>
+      <%= image_tag "clients/zumba.png", class: "client-img" %>
+      <%= image_tag "clients/coppel.png", class: "client-img" %>
+      <%= image_tag "clients/purina.png", class: "client-img" %>
+      <%= image_tag "clients/marin.png", class: "client-img" %>
     </div>
     </div>
   </div>
