--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Video Streaming Solutions: VR Video, VR/AR Experiences, Cloud Encoding & Hosting, Multiplatform Distribution, 360\VR, OTT, DRM, Payments, Analytics">
+    <meta name="description" content="Encoding & Hosting en la nube, Distribución Multiplatforma, 360\VR, OTT, DRM, Manejo de Pagos, Análisis y Métricas">
     <meta name="author" content="info@vr3.io">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <title>VR3 | Video Streaming Solutions: Cloud Encoding & Hosting, Multiplatform Distribution, 360\VR, OTT, DRM, Payments, Analytics</title>
+    <title>VR3 | Infraestructura de Video Web y VR</title>
     <!--Open Graph Protocol-->
     <meta property="og:title" content="VR3 | Web and VR Streaming Solutions and Experiencies" />
     <meta property="og:site_name" content="VR3 Technologies" />
