--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
     <meta property="og:url" content="http://vr3.io" />
     <meta property="og:image" content="http://www.vr3.io/media/img/og_vr3.png" />
 
+    <%= favicon_link_tag 'favicon.ico' %>
+
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
