Added the portfolio section

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -155,7 +155,7 @@
   </div>
 </section>
 <!-- Solutions Section -->
-<section id="solutions">
+<!--section id="solutions">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -200,17 +200,51 @@
       </div>
     </div>
   </div>
-</section>
+</section-->
 <!-- Portfolio Section -->
-<section id="portfolio" class="bg-light-gray">
+<section id="portfolio">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Clientes</h2>
-        <h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3>
+        <h2 class="section-heading">Trabajo</h2>
+        <h3 class="section-subheading normal-text">Lo que hicimos y lo que nos gustó.</h3>
       </div>
     </div>
+    </br>
+    <div class="row">
+      <a href="#">
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img class="img-responsive" src="http://placehold.it/350x250" alt="Google">
+            <div class="caption">
+              <h3><u>Esto Es video</u></h3>
+              <h4>Google/YouTube</h4>
+              <h5>AGENCIA: Caponeto</h5>
+              <h5>FECHA: 20/10/2016 - 4/11/2016</h5>
+              <p>Activación de Realidad Virtual, usando el HTC Vive y Google Tiltbrush para complementar el evento de YouTube: Esto es Video.</p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <a href="#">
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img class="img-responsive" src="http://placehold.it/350x250" alt="Google">
+          <div class="caption">
+            <h3><u>Esto Es Video</u></h3>
+            <h4>Google/YouTube</h4>
+            <h5>AGENCIA: Caponeto</h5>
+            <h5>FECHA: 20/10/2016 - 4/11/2016</h5>
+            <p>Activación de Realidad Virtual, usando el HTC Vive y Google Tiltbrush para complementar el evento de YouTube: Esto es Video.</p>
+          </div>
+        </div>
+      </div>
+    </a>
+
     <br/>
+  </div>
+</section>
 <!-- Contact Section -->
 <section id="contact">
   <div class="container">
