--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -238,6 +238,17 @@ fieldset[disabled] .btn-primary.active {
   }
 }
 
+.thumbnail{
+  background-color: #F8F8f8;
+  //background-image: linear-gradient(to bottom right,#3D73B1, #E73F44);
+  border: 0px;
+}
+.thumbnail:hover{
+  background-color: #F6F6F6;
+  //background-image: linear-gradient(to bottom right,#3D73B1, #E73F44);
+  border: 0px;
+}
+
 .open .dropdown-toggle.btn-xl {
   border-color: #fff;
   color: #fff;
