--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -23,16 +23,16 @@
       <h3>COMUNIDAD</h3>
         <ul class="list-unstyled quicklinks">
           <a href="http://mxvr.co" target="_blank"><li>MXVR</li></a>
-          <a href="./empresa.html#partners"><li>Partners</li></a>
-          <a href="http://blog.vr3.io"><li>Blog</li></a>
-          <a href="http://press.vr3.io"><li>Prensa</li></a>
+          <a href="#"><li>Partners</li></a>
+          <a href="#"><li>Blog</li></a>
+          <a href="#"><li>Prensa</li></a>
         </ul>     
       </div>
     </div>
     <br/>
     <div class="row">
       <div class="col-md-4 col-sm-4">
-        <span class="copyright">VR3 © CGL SAPI de CV</span>
+        <span class="copyright">VR3 © 2017 | <strong>CGL SAPI de CV </strong></span>
       </div>
       <div class="col-md-4 col-sm-4">
         <ul class="list-inline social-buttons">
