--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -9,7 +9,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand page-scroll" href="#page-top">VR3</a>
+      <%= link_to "VR3", root_path , :class => "navbar-brand page-scroll"%>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -17,16 +17,16 @@
         <li class="hidden">
           <a href="#page-top"></a>
         </li>
-        <li>
+        <!--li>
           <a class="page-scroll" href="#services">Servicios</a>
-        </li>
+        </li-->
         <li class="">
           <a class="page-scroll" href="#clients">Clientes</a>
         </li>
         <li class="">
-          <a class="page-scroll" href="#solutions">Soluciones</a>
+          <a class="page-scroll" href="#projects">Proyectos</a>
         </li>
-        <li class="active">
+        <li>
           <a class="page-scroll" href="#contact">Contacto</a>
         </li>
       </ul>
