--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -29,6 +29,9 @@
         <li>
           <a class="page-scroll" href="#contact">Contacto</a>
         </li>
+        <li>
+          <a href="/company">Empresa</a>
+        </li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
