Improved the projects section and created a jobs page. To improve basic projects CRUD

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -8,6 +8,13 @@ body {
   overflow-x: hidden;
   font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+.bio{
+  padding: 30px; 
+}
+
+video{
+width:100%
+}
 
 .text-muted {
   color: #777;
