--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-4 col-sm-4">
         <h3>EMPRESA</h3>
         <ul class="list-unstyled quicklinks">
-          <a href=""><li>Quienes Somos</li></a>
+          <a href="/company"><li>Quienes Somos</li></a>
           <a href="http://blog.vr3.io"><li>Noticias y Eventos</li></a>
           <a href="./empresa.html#jobs"><li>Trabaja en VR3</li></a>
           <a href="#contact"><li>Contacto</li></a>
