--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,21 +1,70 @@
-</br>
-</br>
-</br>
-</br>
-</br>
-<!--Remove Breaking Spaces-->
+<!--header>
+  <div class="container">
+    <div class="intro-text">
+      <div class="intro-heading"><u><%= @project.title %></u></div>
+    </div>
+  </div>
+</header-->
 
-<div class="portfolio">
-	<div class="row text-center">
-		<div class="col-md-12">
-			<u><h1><%= @project.title %></h1></u>
-			<h3><%= @project.client %></h3>
-			<h4><%= @project.provider %></h4>
-			</br>
-			<p><%= @project.description %></p>
-			</br>
-			</br>
-			</br>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+	<ol class="carousel-indicators">
+		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+		<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+		<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+	</ol>
+
+	<!-- Wrapper for slides -->
+	<div class="carousel-inner" role="listbox">            
+
+		<div class="item active">
+			<div align="center">
+				<video autoplay muted loop>
+					<source src="http://vr3.io/img/projects/<%= @project.client %>/v4.mp4" width="1024" height="552" type="video/mp4">
+						Your browser does not support the video tag.
+				</video>
+			</div>
+			<div class="carousel-caption">
+				<h1><u><%= @project.title %></u></h1>
+				<h3>Cliente: <%= link_to(@project.client, "http://twitter.com/googlemexico") %></h3>
+				<h4>Agencia: <%= link_to(@project.provider, "http://caponeto.com") %></h4>
+				<p><%= @project.description %></p>
+			</div>
+		</div> 
+		<div class="item">
+			<div align="center">
+				<video autoplay muted loop>
+					<source src="http://vr3.io/img/projects/<%= @project.client %>/v3.mp4" width="1024" height="552" type="video/mp4">
+						Your browser does not support the video tag.
+				</video>
+			</div>
+			<div class="carousel-caption">
+				<h1><u><%= @project.title %></u></h1>
+				<h3>Cliente: <%= link_to(@project.client, "http://twitter.com/googlemexico") %></h3>
+				<h4>Agencia: <%= link_to(@project.provider, "http://caponeto.com") %></h4>
+				<p><%= @project.description %></p>
+			</div>
 		</div>
+		<div class="item">
+			<div align="center">
+				<video autoplay muted loop>
+					<source src="http://vr3.io/img/projects/<%= @project.client %>/v1.mp4" width="1024" height="552" type="video/mp4">
+						Your browser does not support the video tag.
+				</video>
+			</div>
+			<div class="carousel-caption">
+				<h1><u><%= @project.title %></u></h1>
+				<h3>Cliente: <%= link_to(@project.client, "http://twitter.com/googlemexico") %></h3>
+				<h4>Agencia: <%= link_to(@project.provider, "http://caponeto.com") %></h4>
+				<p><%= @project.description %></p>
+			</div>
+		</div>
+		<a class="left carousel-control" href="#carouselHelp" role="button" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="right carousel-control" href="#carouselHelp" role="button" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
 	</div>
 </div>
