Improved the clients logo section for responsive design, improved the video section i proyect#show

--- a/app/views/home.html.erb
+++ b/app/views/home.html.erb
@@ -85,66 +85,66 @@
     <br/>
 
     <div class="row" id="portfolio"> 
-      <div class="col-md-3">
+      <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
            <%= image_tag "clients/google.png", class: "client-img-high" %>
         </a>
       </div>
-      <div class="col-md-3 ">
+      <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
           <%= image_tag "clients/samsung.png", class: "client-img-high" %>  
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
           <%= image_tag "clients/modelo.png", class: "client-img-high" %>
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
           <%= image_tag "clients/coca.png", class: "client-img-high" %>
         </a>
       </div>
     </div>
     <div class="row" id="portfolio"> 
-      <div class="col-md-3">
+      <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
            <%= image_tag "clients/3m.png", class: "client-img" %>
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
           <%= image_tag "clients/airwick.png", class: "client-img" %>  
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
           <%= image_tag "clients/warner.png", class: "client-img" %>
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
           <%= image_tag "clients/purina.png", class: "client-img" %>
         </a>
       </div>
     </div>
     <div class="row" id="portfolio"> 
-      <div class="col-md-3">
+      <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
            <%= image_tag "clients/coppel.png", class: "client-img" %>
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
           <%= image_tag "clients/scotch.png", class: "client-img" %>  
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
           <%= image_tag "clients/zumba.png", class: "client-img" %>
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-xs-6 col-sm-6 col-md-3">
         <a href="#">
           <%= image_tag "clients/indio.png", class: "client-img" %>
         </a>
