--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -16,6 +16,15 @@ video{
 width:100%
 }
 
+.carousel{
+  margin-top: 70px;
+}
+
+@media only screen and (min-device-width : 375px) and (max-device-width : 667px) { 
+  .carousel{
+  margin-top: 50px;
+  }
+}
 .text-muted {
   color: #777;
   font-family: Montserrat, "Helvetica Neue";
