--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -19,17 +19,31 @@
 		<div class="item active">
 			<div align="center">
 				<video autoplay muted loop>
-					<source src="http://vr3.io/img/projects/<%= @project.client %>/v4.mp4" width="1024" height="552" type="video/mp4">
+					<source src="http://vr3.io/img/projects/<%= @project.client %>/v1.mp4" width="1024" height="552" type="video/mp4">
 						Your browser does not support the video tag.
 				</video>
 			</div>
 			<div class="carousel-caption">
-				<h1><u><%= @project.title %></u></h1>
-				<h3>Cliente: <%= link_to(@project.client, "http://twitter.com/googlemexico") %></h3>
-				<h4>Agencia: <%= link_to(@project.provider, "http://caponeto.com") %></h4>
+				<h3><u><%= @project.title %></u></h3>
+				<h4>Cliente: <%= link_to(@project.client, "http://#{@project.client}.com") %></h4>
+				<!--h4>Agencia: <%= link_to(@project.provider, "http://#{@project.provider}.com") %></h4-->
 				<p><%= @project.description %></p>
 			</div>
 		</div> 
+		<div class="item">
+			<div align="center">
+				<video autoplay muted loop>
+					<source src="http://vr3.io/img/projects/<%= @project.client %>/v2.mp4" width="1024" height="552" type="video/mp4">
+						Your browser does not support the video tag.
+				</video>
+			</div>
+			<div class="carousel-caption">
+				<h3><u><%= @project.title %></u></h3>
+				<h4>Cliente: <%= link_to(@project.client, "http://#{@project.client}.com") %></h4>
+				<!--h4>Agencia: <%= link_to(@project.provider, "http://#{@project.provider}.com") %></h4-->
+				<p><%= @project.description %></p>
+			</div>
+		</div>
 		<div class="item">
 			<div align="center">
 				<video autoplay muted loop>
@@ -38,31 +52,17 @@
 				</video>
 			</div>
 			<div class="carousel-caption">
-				<h1><u><%= @project.title %></u></h1>
-				<h3>Cliente: <%= link_to(@project.client, "http://twitter.com/googlemexico") %></h3>
-				<h4>Agencia: <%= link_to(@project.provider, "http://caponeto.com") %></h4>
+				<h3><u><%= @project.title %></u></h3>
+				<h4>Cliente: <%= link_to(@project.client, "http://#{@project.client}.com") %></h4>
+				<!--h4>Agencia: <%= link_to(@project.provider, "http://#{@project.provider}.com") %></h4-->
 				<p><%= @project.description %></p>
 			</div>
 		</div>
-		<div class="item">
-			<div align="center">
-				<video autoplay muted loop>
-					<source src="http://vr3.io/img/projects/<%= @project.client %>/v1.mp4" width="1024" height="552" type="video/mp4">
-						Your browser does not support the video tag.
-				</video>
-			</div>
-			<div class="carousel-caption">
-				<h1><u><%= @project.title %></u></h1>
-				<h3>Cliente: <%= link_to(@project.client, "http://twitter.com/googlemexico") %></h3>
-				<h4>Agencia: <%= link_to(@project.provider, "http://caponeto.com") %></h4>
-				<p><%= @project.description %></p>
-			</div>
-		</div>
-		<a class="left carousel-control" href="#carouselHelp" role="button" data-slide="prev">
+		<a class="left carousel-control" role="button" data-slide="prev">
 			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 			<span class="sr-only">Previous</span>
 		</a>
-		<a class="right carousel-control" href="#carouselHelp" role="button" data-slide="next">
+		<a class="right carousel-control" role="button" data-slide="next">
 			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 			<span class="sr-only">Next</span>
 		</a>
