--- a/app/views/home.html.erb
+++ b/app/views/home.html.erb
@@ -10,7 +10,7 @@
 </header>
 
 <!-- Services Section -->
-<!--section id="services">
+<section id="services">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -72,14 +72,15 @@
       </div>
     </div>
   </div>
-</section--!>
+</section>
+
 <!-- Clients Section -->
 <section id="clients" class="bg-light-gray">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Clientes</h2>
-        <h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3>
+        <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
       </div>
     </div>
     <br/>
@@ -209,7 +210,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Proyectos</h2>
-        <h3 class="section-subheading normal-text">Lo que hicimos y lo que nos gustó.</h3>
+        <!--h3 class="section-subheading normal-text">Lo que hicimos y lo que nos gustó.</h3-->
       </div>
     </div>
     </br>
@@ -226,7 +227,7 @@
                 <h4>CLiente: <%= p.client %></h4>
                 <h5>Agencia: <%= p.provider %></h5>
                 <h5><%= p.date %></h5>
-                <p><%= p.description %></p>
+                <p><%= p.description.truncate(80) %></p>
               </div>
             </div>
           </div>
