--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,20 @@
   <%= render partial: "partials/footer" %>
 </html>
 
+
+<!--script>
+
+    $(window).scroll(function(){
+      var scroll = $(window).scrollTop(); // scroll gets 0 from the top value
+      var height = 600; //this will determine when does the header has to switch
+      
+      if(scroll >= height){
+        $("nav").addClass("navbar-shrink")
+      } else if(scroll < height){
+        $("nav").removeClass("navbar-shrink")
+      }  
+    });
+</script-->
   <!--
 
     WHAT IS IT EXACTLY THAT YOU ARE LOOKING FOR?
