--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -6,8 +6,8 @@
         <ul class="list-unstyled quicklinks">
           <a href="/company"><li>Quienes Somos</li></a>
           <a href="http://blog.vr3.io"><li>Noticias y Eventos</li></a>
-          <a href="./empresa.html#jobs"><li>Trabaja en VR3</li></a>
-          <a href="#contact"><li>Contacto</li></a>
+          <a href="/jobs"><li>Trabajo</li></a>
+          <%= link_to "Contacto", root_path(:anchor => "contact") %>
         </ul>
       </div>
       <div class="col-md-4 col-sm-4">
