Created more projects and improved their styling

--- a/app/views/home.html.erb
+++ b/app/views/home.html.erb
@@ -10,7 +10,28 @@
 </header>
 
 <!-- Services Section -->
-<section id="services">
+<!--section id="services">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Servicios</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 col-sm-4">
+        <button class="btn-xl btn-inverse">Transmisiones en Vivo</button>
+      </div>
+      <div class="col-md-4 col-sm-4">
+        <button class="btn-xl btn-inverse">Renta de equipo de VR/AR</button>
+      </div>
+      <div class="col-md-4 col-sm-4">
+        <button class="btn-xl btn-inverse">Desarrollo de Software</button>
+      </div>
+    </div>
+  </div>
+</section-->
+
+<!--section id="services">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -72,7 +93,7 @@
       </div>
     </div>
   </div>
-</section>
+</section-->
 
 <!-- Clients Section -->
 <section id="clients" class="bg-light-gray">
@@ -227,7 +248,7 @@
                 <h4>CLiente: <%= p.client %></h4>
                 <h5>Agencia: <%= p.provider %></h5>
                 <h5><%= p.date %></h5>
-                <p><%= p.description.truncate(80) %></p>
+                <p><%= p.description.truncate(90) %></p>
               </div>
             </div>
           </div>
