--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -61,13 +61,13 @@
 				<p><%= @project.description %></p>
 			</div>
 		</div>
-		<a class="left carousel-control" role="button" data-slide="prev">
+		<!--a class="left carousel-control" role="button" data-slide="prev">
 			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 			<span class="sr-only">Previous</span>
 		</a>
 		<a class="right carousel-control" role="button" data-slide="next">
 			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 			<span class="sr-only">Next</span>
-		</a>
+		</a-->
 	</div>
 </div>
