Created jobs, services page. Created custom ActionMailer for Contact Form, still not working. Improved style

--- a/app/views/home.html.erb
+++ b/app/views/home.html.erb
@@ -269,8 +269,8 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-12">
-        <form action="php/contact.php" method="post" class="validate" target="_blank" novalidate role="form" id="contactForm">
+      <div class="col-md-6 col-md-offset-3">
+        <form action="vr3.io/php/contact.php" method="post" class="validate" target="_blank" novalidate role="form" id="contactForm">
           <div class="row">
             <div class="col-md-6 col-md-offset-3">
               <div class="form-group">
@@ -288,7 +288,7 @@
               
                <div class="checkbox">
                 <label>
-                  <input type="checkbox"> <p class="normal-text-white">Al enviar esta forma aceptas el <a href="./privacidad.html" style="color: #FFBDBE;">Aviso de Privacidad y Términos de Uso</a></p>
+                  <input type="checkbox"> <p class="normal-text-white">Al enviar esta forma aceptas el <a href="/privacy" style="color: #FFBDBE;">Aviso de Privacidad y Términos de Uso</a></p>
                 </label>
               </div>        
               <div class="g-recaptcha" data-sitekey="6Ld6AR8TAAAAACju2U8T7UsQNRq_GadUYw9HOXnk"></div>
