--- a/app/views/jobs.html.erb
+++ b/app/views/jobs.html.erb
@@ -1,10 +1,10 @@
-<header>
+<div id="full-blue">
   <div class="container">
     <div class="intro-text">
-      <div class="intro-heading">Únete a la misión y trabaja con nosotros.</div>
+      <div class="intro-heading">Trabaja con nosotros.</div>
     </div>
   </div>
-</header>
+</div>
 <br>
 <div class="container">
 	<div class="row text-center">
