--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta name="description" content="Encoding & Hosting en la nube, Distribución Multiplatforma, 360\VR, OTT, DRM, Manejo de Pagos, Análisis y Métricas">
     <meta name="author" content="info@vr3.io">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <title>VR3 | Infraestructura de Video Web y VR</title>
+    <title>VR3 | Video Web y VR</title>
     <!--Open Graph Protocol-->
     <meta property="og:title" content="VR3 | Web and VR Streaming Solutions and Experiencies" />
     <meta property="og:site_name" content="VR3 Technologies" />
