--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -25,7 +25,7 @@
           <a href="http://mxvr.co" target="_blank"><li>MXVR</li></a>
           <a href="#"><li>Partners</li></a>
           <a href="#"><li>Blog</li></a>
-          <a href="#"><li>Prensa</li></a>
+          <a href="/press"><li>Prensa</li></a>
         </ul>     
       </div>
     </div>
