--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -18,7 +18,7 @@
           <a href="#page-top"></a>
         </li>
         <li class="">
-          <%= link_to "Servicios", root_path(:anchor => "services") %>
+          <a href="/services">Servicios</a>
         </li>
         <li class="">
           <%= link_to "Clientes", root_path(:anchor => "clients") %>
