--- a/app/views/services.html.erb
+++ b/app/views/services.html.erb
@@ -1,13 +1,10 @@
-<!-- Header -->
-<header>
+<div id="full-blue">
   <div class="container">
     <div class="intro-text">
-      <div class="intro-heading">TODO EN UNO</div>
-      <!--div class="intro-lead-in">Dejanos preocuparnos por los detalles.</div-->
-      <a href="#services" class="page-scroll btn btn-xl">Descubre como aquí</a>
+      <div class="intro-heading">Trabaja con nosotros.</div>
     </div>
   </div>
-</header>
+</div>
 <!-- Solutions Section -->
 <section id="clients" class="bg-light-gray">
   <div class="container">
