--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -421,11 +421,76 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 
+div#full-orange{
+  text-align: center;
+  color: #fff;
+  background-attachment: scroll;
+  background-image: linear-gradient(to bottom right, #ffb347, #ffcc33);
+  background-position: center center;
+  background-repeat: none;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  .intro-text {
+    padding-top: 100px;
+    padding-bottom: 50px;
+    .intro-lead-in {
+      margin-bottom: 25px;
+      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-size: 22px;
+      line-height: 22px;
+    }
+    .intro-heading {
+      margin-top: 25px;
+      margin-bottom: 25px;
+      text-transform: uppercase;
+      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-size: 50px;
+      font-weight: 700;
+      line-height: 50px;
+    }
+  }
+}
+
+div#full-blue{
+  text-align: center;
+  color: #fff;
+  background-attachment: scroll;
+  background-image: linear-gradient(to bottom right, #43cea2, #185a9d);
+  background-position: center center;
+  background-repeat: none;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  .intro-text {
+    padding-top: 100px;
+    padding-bottom: 50px;
+    .intro-lead-in {
+      margin-bottom: 25px;
+      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-size: 22px;
+      line-height: 22px;
+    }
+    .intro-heading {
+      margin-top: 25px;
+      margin-bottom: 25px;
+      text-transform: uppercase;
+      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-size: 50px;
+      font-weight: 700;
+      line-height: 50px;
+    }
+  }
+}
+
 header {
   text-align: center;
   color: #fff;
   background-attachment: scroll;
-  background-image: linear-gradient(to bottom right, #3D73B1, #E73F44);
+  background-image: linear-gradient(to bottom right, #EB3349, #F45C43);
+  //background-image: linear-gradient(to bottom right, #3D73B1, #E73F44);
   background-position: center center;
   background-repeat: none;
   -webkit-background-size: cover;
@@ -469,6 +534,48 @@ header {
       font-size: 50px;
       font-weight: 700;
       line-height: 75px;
+    }
+  }
+
+  div#full-orange{ 
+    .intro-text {
+      padding-top: 100px;
+      padding-bottom: 50px;
+      .intro-lead-in {
+        margin-bottom: 25px;
+        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size: 25px;
+        line-height: 40px;
+      }
+      .intro-heading {
+        margin-bottom: 10px;
+        text-transform: uppercase;
+        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size: 50px;
+        font-weight: 700;
+        line-height: 75px;
+      }
+    }
+  }
+
+  div#full-blue{ 
+    .intro-text {
+      padding-top: 100px;
+      padding-bottom: 50px;
+      .intro-lead-in {
+        margin-bottom: 25px;
+        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size: 25px;
+        line-height: 40px;
+      }
+      .intro-heading {
+        margin-bottom: 10px;
+        text-transform: uppercase;
+        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size: 50px;
+        font-weight: 700;
+        line-height: 75px;
+      }
     }
   }
 }
@@ -602,7 +709,7 @@ section {
     .text-danger {
       color: #e74c3c;
     }
-    background-image: linear-gradient(to bottom right, #3D73B1, #E73F44);
+    background-image: linear-gradient(to bottom right, #EB3349, #F45C43);
   }
   &#clients {
     text-align: center;
