Added Devise for user management

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -269,7 +269,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-12 col-sm-12">
         <form action="vr3.io/php/contact.php" method="post" class="validate" target="_blank" novalidate role="form" id="contactForm">
           <div class="row">
             <div class="col-md-6 col-md-offset-3">
