Added services in footer

--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -13,10 +13,10 @@
       <div class="col-md-4 col-sm-4">
         <h3>SERVICIOS</h3>
         <ul class="list-unstyled quicklinks">
-          <a href="./servicios.html#live"><li>Streaming en Vivo</li></a>
-          <a href="./servicios.html#vod"><li>Video en Demanda</li></a>
-          <a href="./servicios.html#viewers"><li>360/VR/OTT/iOS/Android</li></a>
-          <a href="./servicios.html#vrar"><li>Desarrollo de VR/AR</li></a>
+          <a href="/services#live"><li>Streaming en Vivo / VOD</li></a>
+          <a href="/services#development"><li>Desarrollo de VR y AR</li></a>
+          <a href="/services#equipement"><li>Renta de Equipo</li></a>
+          <a href="/services#marketing"><li>Activaciones Comerciales</li></a>
         </ul>
       </div>
       <div class="col-md-4 col-sm-4">
