--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,27 +1,49 @@
-<div id="full-blue">
+<div id="full-orange">
   <div class="container">
     <div class="intro-text">
-      <div class="intro-heading">Trabaja con nosotros.</div>
+      <div class="intro-heading">Servicios</div>
     </div>
   </div>
 </div>
-<!-- Solutions Section -->
-<section id="clients" class="bg-light-gray">
+<!-- Subservice:Live Section -->
+<section id="live" class="bg-light-gray">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Clientes</h2>
-        <h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3>
+        <h2 class="section-heading">Transmisiones en vivo</h2>
+        <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
       </div>
     </div>
   </div>
 </section>
-<!-- Solutions Section -->
-<section id="solutions">
+<!-- Subservice:Dev Section -->
+<section id="development">
   <div class="container">
     <div class="row">
       <div class="text-center">
-        <h2 class="section-heading">Soluciones</h2>
+        <h2 class="section-heading">Creacion de Aplicaciones de VR y AR</h2>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Subservice:Rent Section -->
+<section id="equipement" class="bg-light-gray">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Renta de equipo especializado</h2>
+        <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Subservice:Marketing Section -->
+<section id="marketing">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Activaciones Comerciales </h2>
+        <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
       </div>
     </div>
   </div>
