Vendorizing assets such as images inside rails app

--- a/app/views/company.html.erb
+++ b/app/views/company.html.erb
@@ -18,7 +18,7 @@
 		</div>
 		<!--Oscar Chavez-->
 		<div class="col-sm-4 col-md-6 ">
-			<%= image_tag "http://vr3.io/img/team/oscar.png", :class => "img-responsive img-circle", :style => "max-width: 50%; transform:translate(50%,0)" %>
+			<%= image_tag "/company/team/oscar.png", :class => "img-responsive img-circle", :style => "max-width: 50%; transform:translate(50%,0)" %>
 			<h3>Oscar Chavez</h3>
 			<h5>Cofundador & CEO</h5>
 			<p>Director Comercial. Desarrollador Web Fullstack.</p>
@@ -33,7 +33,7 @@
 		</div>
 		<!--Patrick Moss-->
 		<div class="col-sm-4 col-md-6">
-			<%= image_tag "http://vr3.io/img/team/patrick.png", :class => "img-responsive img-circle", :style => "max-width: 50%; transform:translate(50%,0)" %>
+			<%= image_tag "/company/team/patrick.png", :class => "img-responsive img-circle", :style => "max-width: 50%; transform:translate(50%,0)" %>
 			<h3>Patrick Moss</h3>
 			<h5>Cofundador & CTO</h5>
 			<p>Director Tecnología. Desarrollador Principal. </p>
