Added friendlyId to projects model, improved landing page, overall ui improvement

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Encoding & Hosting en la nube, Distribución Multiplatforma, 360\VR, OTT, DRM, Manejo de Pagos, Análisis y Métricas">
+    <meta name="description" content="Soluciones de Video Web y VR, Encoding y Hosting en la nube, Distribución Multiplatforma, 360\VR, OTT, DRM, Manejo de Pagos, Análisis y Métricas, Renta y Venta de Equipo Especializado">
     <meta name="author" content="info@vr3.io">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <favicon_link_tag "favicon.png", type: 'image/png'>
     <title>VR3 | Video Web y VR</title>
     <!--Open Graph Protocol-->
-    <meta property="og:title" content="VR3 | Web and VR Streaming Solutions and Experiencies" />
+    <meta property="og:title" content="VR3 | Video Web y VR" />
     <meta property="og:site_name" content="VR3 Technologies" />
     <meta property="og:type" content="image"/>
     <meta property="og:url" content="http://vr3.io" />
