--- a/app/views/pages/company.html.erb
+++ b/app/views/pages/company.html.erb
@@ -1,15 +1,15 @@
-<header>
+<div id="full-blue">
   <div class="container">
     <div class="intro-text">
-      <div class="intro-heading">Expertos en VR</div>
+      <div class="intro-heading">Nosotros</div>
     </div>
   </div>
-</header>
+</div>
 <br>
 <div class="container">
 	<div class="row text-center">
 		<h3>Compañia</h3>
-		<div class="text-center bio">
+		<div class="text-center b io">
 			<p><strong><%= link_to "VR3", root_path %></strong> es un startup de Realidad Virtual en la Ciudad de México.</p>
 			<p>Creamos experiencias interactivas para agencias, publicidad, mercadotecnia, casas productoras y cualquier 
 			empresa, compañía o particular interesado.</p>
