--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,3 +1,4 @@
+<hr>
 <footer>
   <div class="container">
     <div class="row">
@@ -23,8 +24,8 @@
       <h3>COMUNIDAD</h3>
         <ul class="list-unstyled quicklinks">
           <a href="http://mxvr.co" target="_blank"><li>MXVR</li></a>
-          <a href="#"><li>Partners</li></a>
-          <a href="#"><li>Blog</li></a>
+          <a href="http://shop.vr3.io"><li>Tienda</li></a>
+          <a href="http://blog.vr3.io"><li>Blog</li></a>
           <a href="/press"><li>Prensa</li></a>
         </ul>     
       </div>
@@ -46,7 +47,7 @@
       </div>
       <div class="col-md-4 col-sm-4">
         <ul class="list-inline quicklinks">
-          <li><a href="./privacidad.html">Aviso de Privacidad y Términos de Uso</a></li>
+          <li><a href="/privacy">Aviso de Privacidad y Términos de Uso</a></li>
         </ul>
       </div>
     </div>
