--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -17,7 +17,7 @@
         <li class="hidden">
           <a href="#page-top"></a>
         </li>
-        <li class="">
+        <li >
           <a href="/services">Servicios</a>
         </li>
         <li class="">
@@ -32,6 +32,16 @@
         <li>
           <a href="/company">Empresa</a>
         </li>
+        <!--li class="dropdown">
+          <a href="/company" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Empresa <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Prensa</a></li>
+            <li><a href="#">Tienda</a></li>
+          </ul>
+        </li-->
+
+
       </ul>
     </div>
     <!-- /.navbar-collapse -->
