--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -18,8 +18,9 @@
 
 		<div class="item active">
 			<div align="center">
+
 				<video autoplay muted loop>
-					<source src="http://vr3.io/img/projects/<%= @project.client %>/v1.mp4" width="1024" height="552" type="video/mp4">
+					<source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/v1.mp4" width="1024" height="552" type="video/mp4">
 						Your browser does not support the video tag.
 				</video>
 			</div>
@@ -36,7 +37,7 @@
 		<div class="item">
 			<div align="center">
 				<video autoplay muted loop>
-					<source src="http://vr3.io/img/projects/<%= @project.client %>/v2.mp4" width="1024" height="552" type="video/mp4">
+					<source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/v2.mp4" width="1024" height="552" type="video/mp4">
 						Your browser does not support the video tag.
 				</video>
 			</div>
@@ -50,7 +51,7 @@
 		<div class="item">
 			<div align="center">
 				<video autoplay muted loop>
-					<source src="http://vr3.io/img/projects/<%= @project.client %>/v3.mp4" width="1024" height="552" type="video/mp4">
+					<source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/v3.mp4" width="1024" height="552" type="video/mp4">
 						Your browser does not support the video tag.
 				</video>
 			</div>
