--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -13,7 +13,7 @@ body {
 }
 
 video{
-width:100%;
+  width: 100%;
 }
 
 .carousel{
@@ -485,46 +485,75 @@ div#full-blue{
   }
 }
 
-header {
+.videoContainer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-attachment: scroll;
+    overflow: hidden;
+}
+.videoContainer video {
+    min-width: 100%;
+    height:auto;
+    position: relative;
+    z-index: 1;
+}
+.videoContainer .overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+    background-image: linear-gradient(to bottom right, #EB3349, #F45C43);
+    opacity: 0.85;
+}
+
+
+.intro-text {
   text-align: center;
   color: #fff;
-  background-attachment: scroll;
-  background-image: linear-gradient(to bottom right, #EB3349, #F45C43);
-  //background-image: linear-gradient(to bottom right, #3D73B1, #E73F44);
-  background-position: center center;
-  background-repeat: none;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-  .intro-text {
-    padding-top: 100px;
-    padding-bottom: 50px;
-    .intro-lead-in {
-      margin-bottom: 25px;
-      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-      font-size: 22px;
-      line-height: 22px;
-    }
-    .intro-heading {
-      margin-bottom: 25px;
-      text-transform: uppercase;
-      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-      font-size: 50px;
-      font-weight: 700;
-      line-height: 50px;
-    }
+
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  height: 30%;
+  width: 50%;
+  margin: -15% 0 0 -25%;
+
+
+  .intro-lead-in {
+    margin-bottom: 25px;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 22px;
+    line-height: 22px;
+  }
+  .intro-heading {
+    margin-bottom: 25px;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 25px;
+    font-weight: 700;
+    line-height: 30px;
   }
 }
 
 @media (min-width: 768px) {
-  header .intro-text {
-    padding-top: 300px;
-    padding-bottom: 200px;
+  .intro-text {
+    text-align: center;
+    color: #fff;
+
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    height: 30%;
+    width: 50%;
+    margin: -15% 0 0 -25%;
+
     .intro-lead-in {
       margin-bottom: 25px;
       font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-      font-size: 25px;
+      font-size: 35px;
       line-height: 40px;
     }
     .intro-heading {
@@ -533,7 +562,7 @@ header {
       font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
       font-size: 50px;
       font-weight: 700;
-      line-height: 75px;
+      line-height: 55px;
     }
   }
 
