Improving devise views. Improving overall website style

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,7 +28,7 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "Enviar", :class => "btn-xl btn-inverse" %>
+          <%= f.submit "Enviar", :class => "btn-xl btn-primary" %>
         </div>
       <% end %>
       <br>
