--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,14 @@
 <!-- Header -->
 
-<div class="videoContainer">
+<header>
+  <div class="intro-text">
+    <div class="intro-heading">Video Web y VR.</div>
+    <div class="intro-lead-in">La siguiente forma de entretenimiento.</div>
+    <a href="#projects" class="page-scroll btn btn-xl">Conoce más</a>
+  </div>
+</header>
+
+<!--div class="videoContainer">
   <div class="overlay">
     <div class="intro-text">
       <div class="intro-heading">Video y VR en Vivo.</div>
@@ -12,7 +20,7 @@
       <source src="http://vectorthree.com/vr3/img/main/vr3.mp4" type="video/mp4" autoplay muted loop>
       <source src="http://vectorthree.com/vr3/img/main/vr3.webm" type="video/webm" autoplay muted loop>
   </video>
-</div>
+</div-->
 
 <!-- Beta Section >
 <section id="subscribe" class="bg-darkest-gray">
