--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -421,6 +421,58 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 
+header {
+  text-align: center;
+  color: #fff;
+  background-attachment: scroll;
+  background-image: linear-gradient(to bottom right, #3D73B1, #E73F4);
+  background-position: center center;
+  background-repeat: none;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  .intro-text {
+    padding-top: 100px;
+    padding-bottom: 50px;
+    .intro-lead-in {
+      margin-bottom: 25px;
+      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-size: 22px;
+      line-height: 22px;
+    }
+    .intro-heading {
+      margin-bottom: 25px;
+      text-transform: uppercase;
+      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-size: 50px;
+      font-weight: 700;
+      line-height: 50px;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  header .intro-text {
+    padding-top: 300px;
+    padding-bottom: 200px;
+    .intro-lead-in {
+      margin-bottom: 25px;
+      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-size: 25px;
+      line-height: 40px;
+    }
+    .intro-heading {
+      margin-bottom: 10px;
+      text-transform: uppercase;
+      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-size: 50px;
+      font-weight: 700;
+      line-height: 75px;
+    }
+  }
+}
+
 div#full-orange{
   text-align: center;
   color: #fff;
